fix photo stretching in card

--- a/pet-shop/src/components/Card/card.scss
+++ b/pet-shop/src/components/Card/card.scss
@@ -18,6 +18,7 @@
   margin-left: auto;
   margin-right: auto;
   margin-top: 25px;
+  object-fit: cover;
 }
 
 .pet_name {
